# game-prog-cpp

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  CMakePresets.json  README.md  toolchain.cmake
.repo/local_manifests/: manifest.xml
Chapter01/: Ball.h  CMakeLists.txt  Constants.h  Game.cpp  Game.h  Paddle.h
Chapter02/: Actor.h  CMakeLists.txt  Game.cpp  Game.h  SpriteComponent.h
